Fimleri ekleyip arayüze ve storage'e ekleme

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
             <script src="ui.js"></script>
             <script src="storage.js"></script>
             <script src= "film.js"></script>
-
+            <!-- Yukarıdaki snıfların project.js'de tanımlı olabilmesi için en son onu ekledik -->
             <script src="project.js"></script>
+            
 
 </body>
 </html>
